--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Tariner-Native",
-    "slug": "Tariner-Native",
-    "version": "1.0.0",
+    "name": "Hard Racoon",
+    "slug": "hard-racoon",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
