--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tariner-native",
-  "version": "1.0.0",
+  "name": "hard-racoon",
+  "version": "1.1.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -9,13 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "expo": "~54.0.30",
+    "expo-av": "~16.0.8",
+    "expo-camera": "~17.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-status-bar": "~3.0.9",
+    "nativewind": "^4.1.23",
+    "openai": "^6.15.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.9",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
   },
   "private": true
