--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hard-racoon",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -16,13 +16,16 @@
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
     "expo-file-system": "~19.0.21",
+    "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.1.23",
     "openai": "^6.15.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-url-polyfill": "^3.0.0"
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
